Franchise microservice connected to Consul
 The franchising microservice is registered to consul.

--- a/FranchiseMicroservice/src/main/resources/application.properties
+++ b/FranchiseMicroservice/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
+
+spring.application.name=franchiseService
+server.port=0
+
+spring.cloud.consul.host= localhost
+spring.cloud.consul.port=8500
+spring.cloud.consul.discovery.health-check-path=/
+spring.cloud.consul.discovery.instance-id=franchiseService-${random.uuid}
