Test microservice Reports
Tested the connection to the discovery service and the reporting microservice

--- a/FranchiseMicroservice/src/main/resources/application.properties
+++ b/FranchiseMicroservice/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#Configuration Postgresql
 spring.datasource.url=jdbc:postgresql://localhost:5432/franchisestorage
 spring.datasource.username=postgres
 spring.datasource.password=1234
@@ -6,10 +7,15 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 
+#Configuration Service
 spring.application.name=franchiseService
-server.port=0
+server.port=8501
 
+#Configuration Consul Service
 spring.cloud.consul.host= localhost
 spring.cloud.consul.port=8500
 spring.cloud.consul.discovery.health-check-path=/
-spring.cloud.consul.discovery.instance-id=franchiseService-${random.uuid}
+spring.cloud.consul.discovery.instance-id=${spring.application.name}
+
+#this will allow multiple instances of one service to run on one machine.
+#spring.cloud.consul.discovery.instance-id=franchiseService-${random.uuid}
