--- a/ReportsService/src/main/resources/application.properties
+++ b/ReportsService/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=reportsService
-server.port=0
+server.port=8502
 
 spring.cloud.consul.host= localhost
 spring.cloud.consul.port=8500
 spring.cloud.consul.discovery.health-check-path=/
-spring.cloud.consul.discovery.instance-id=reportsService-${random.uuid}
+spring.cloud.consul.discovery.instance-id=${spring.application.name}
+
+#this will allow multiple instances of one service to run on one machine.
+#spring.cloud.consul.discovery.instance-id=franchiseService-${random.uuid}
