--- a/FranchiseMicroservice/pom.xml
+++ b/FranchiseMicroservice/pom.xml
@@ -71,6 +71,10 @@
 			<artifactId>spring-cloud-starter-consul-discovery</artifactId>
 			<version>3.1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
