--- a/FranchiseMicroservice/src/main/resources/application.properties
+++ b/FranchiseMicroservice/src/main/resources/application.properties
@@ -1,11 +1,21 @@
 #Configuration Postgresql
-spring.datasource.url=jdbc:postgresql://localhost:5432/franchisestorage
-spring.datasource.username=postgres
-spring.datasource.password=1234
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=false
+postgres.datasource.url=jdbc:postgresql://localhost:5432/franchisestorage
+postgres.datasource.username=postgres
+postgres.datasource.password=1234
+postgres.datasource.driver-class-name=org.postgresql.Driver
+postgres.jpa.hibernate.ddl-auto=update
+postgres.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+postgres.jpa.show-sql=false
+
+#Configuration H2
+h2.datasource.url=jdbc:h2:file:./db/carritodb
+h2.datasource.username=sa
+h2.datasource.password=1234
+h2.datasource.driver-class-name=org.h2.Driver
+h2.jpa.database-platform=org.hibernate.dialect.H2Dialect
+h2.h2.console.enabled=true
+h2.jpa.hibernate.ddl-auto=create-drop
+#h2.datasource.generate-unique-name=false
 
 #Configuration Service
 spring.application.name=franchiseService
